# text-please

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  makefile  package.json  pnpm-lock.yaml
.changeset/: all-lions-search.md  config.json  lovely-flies-add.md  purple-pillows-worry.md
.github/workflows/: release.yml
scripts/: patch-wasm-dts.sh
src/: docx.rs  lib.rs  pdf.rs  plaintext.rs  xlsx.rs
src/common/: text.rs
