[package]
name = "text-please"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pdf_oxide = "0.3.17"
wasm-bindgen = "0.2"
unicode-normalization = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.39"

[dev-dependencies]
wasm-bindgen-test = "0.3.64"
